Corrected navbar collapsed color

--- a/App_files/app/styles/mystyles.css
+++ b/App_files/app/styles/mystyles.css
@@ -1,3 +1,40 @@
+.navbar-inverse {
+     background: rgb(57, 226, 164); 
+}
+
+.navbar-inverse .navbar-nav > .active > a,
+.navbar-inverse .navbar-nav > .active > a:hover,
+.navbar-inverse .navbar-nav > .active > a:focus {
+    color: #000;
+    background: #007EEA;
+}
+
+.navbar-inverse .navbar-nav > .open > a,
+ .navbar-inverse .navbar-nav > .open > a:hover,
+ .navbar-inverse .navbar-nav > .open > a:focus {
+    color: #000;
+    background: #007EEA;
+}
+
+.navbar-inverse .navbar-nav .open .dropdown-menu> li> a,
+.navbar-inverse .navbar-nav .open .dropdown-menu {
+    background-color: #007EEA;
+    color:#eeeeee;
+}
+
+.navbar-inverse .navbar-nav .open .dropdown-menu> li> a:hover {
+    color:#000000;
+}
+
+.navbar-inverse .navbar-nav>li>a {
+    color: #000;
+    text-align:center;
+}
+
+.navbar-inverse .navbar-brand {
+    color: #222;
+}
+
 .center {
     margin: auto;
     text-align: center;
@@ -18,10 +55,6 @@
 
 .topofpage {
     padding-top: 50px;
-}
-
-nav.navbar {
-     background-color: rgb(57, 226, 164);   
 }
 
 footer {
